--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -8,8 +8,21 @@ $breakpoints: (
 	'xxs': (max-width: 375px),
 );
 
-$font: Segoe Ui, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$font: Verdana, 'Verdana', Arial, sans-serif;
+$font-head: 'Exo', Arial, sans-serif;
 
-$container_width: 1000px;
+$container_width: 1640px;
 
 $gutter: 12px;
+
+$red: #f81242;
+$green: #00c453;
+$blue: #2f7bff;
+
+$pad-xxl: 100px;
+$pad-xl: 70px;
+$pad-l: 50px;
+$pad-m: 30px;
+$pad-s: 20px;
+$pad-xs: 15px;
+$pad-xxs: 10px;
