--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,6 @@
 @import 'modules/forms';
 @import 'modules/buttons';
 @import 'modules/modals';
+@import 'modules/header';
 
 @import 'pages/home';
