--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,12 +1,59 @@
-body{
+body {
 	font-family: $font;
 	font-size: 16px;
-	font-weight: 400;
+	font-weight: normal;
 	line-height: 1.4;
-	color: #353434;
+	color: #000;
 }
 
-a{
+a {
 	color: inherit;
 	text-decoration: none;
+}
+
+h1, .h1 {
+	margin-bottom: 0.4em;
+	font-family: $font-head;
+	font-weight: bold;
+	font-size: 45px;
+	line-height: 1.4;
+}
+
+h2, .h2 {
+	margin-bottom: 0.4em;
+	font-family: $font-head;
+	font-weight: bold;
+	font-size: 28px;
+	line-height: 1.4;
+}
+
+h3, .h3 {
+	margin-bottom: 0.4em;
+	font-family: $font-head;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 1.4;
+}
+
+.user-content {
+	font-family: $font;
+	font-size: 14px;
+	line-height: 1.4;
+	color: #000;
+	@include res(l) {
+		font-size: 12px;
+	}
+	p, ul, ol, li {
+		position: relative;
+		margin-bottom: 0.5em;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+	&--mini {
+		font-size: 12px;
+		@include res(l) {
+			font-size: 10px;
+		}
+	}
 }
