--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -12,27 +12,28 @@ a {
 }
 
 h1, .h1 {
-	margin-bottom: 0.4em;
 	font-family: $font-head;
 	font-weight: bold;
 	font-size: 45px;
-	line-height: 1.4;
+	line-height: 1.1;
 }
 
 h2, .h2 {
-	margin-bottom: 0.4em;
 	font-family: $font-head;
 	font-weight: bold;
 	font-size: 28px;
-	line-height: 1.4;
+	line-height: 1.2;
 }
 
 h3, .h3 {
-	margin-bottom: 0.4em;
 	font-family: $font-head;
 	font-weight: bold;
 	font-size: 16px;
 	line-height: 1.4;
+}
+
+.small-text{
+	font-size: 12px;
 }
 
 .user-content {
