--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,5 +15,6 @@
 @import 'modules/buttons';
 @import 'modules/modals';
 @import 'modules/header';
+@import 'modules/section-title';
 
 @import 'pages/home';
