--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -1,20 +1,33 @@
-label{cursor: pointer;}
+label {
+	cursor: pointer;
+}
 
-.text-input{
+button {
+	border: none;
+	cursor: pointer;
+}
+
+.input-text {
 	display: inline-block;
+	padding: 5px 10px;
 	font-family: $font;
 	font-size: 14px;
 	line-height: 1.3;
-	-webkit-appearance: none;
 	border: 1px solid #666;
-	padding: 5px 10px;
 	overflow: visible;
+	-webkit-appearance: none;
+	@include res(l) {
+		font-size: 16px;
+	}
 
 	@include placeholder {
 		font-size: 14px;
 		color: #A8A8A8;
 		opacity: 1;
 		transition: all 0.3s ease;
+		@include res(l) {
+			font-size: 16px;
+		}
 	}
 
 	&:focus{
@@ -23,9 +36,45 @@ label{cursor: pointer;}
 			opacity: 0;
 		}
 	}
+
+	&--search {
+		padding: 10px 20px;
+		border-color: #959595;
+		border-radius: 25px;
+		font-style: italic;
+		@include placeholder {
+			font-style: italic;
+		}
+
+	}
 }
 
-
+.form-search {
+	position: relative;
+	max-width: 385px;
+	width: 100%;
+	@include res(xl) {
+		max-width: 300px;
+	}
+	input {
+		width: 100%;
+	}
+	button {
+		position: absolute;
+		top: 50%;
+		right: 0;
+		padding: 5px 15px;
+		font-size: 22px;
+		color: #3c4855;
+		background: none;
+		transition: all 0.3s ease;
+		transform: translate3d(0,-50%,0);
+		z-index: 1;
+		&:hover {
+			color: $blue;
+		}
+	}
+}
 
 //style-checkbox
 .style-checkbox{
