почти готовы товары

--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -13,12 +13,13 @@ $font-head: 'Exo', Arial, sans-serif;
 
 $container_width: 1640px;
 
-$gutter: 15px;
+$gutter: 14px;
 
 $red: #f81242;
 $green: #00c453;
 $blue: #2f7bff;
 $gray-bg: #f0f0f7;
+$gray-border: #ebebeb;
 
 $pad-xxl: 100px;
 $pad-xl: 70px;
