--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -68,10 +68,26 @@
 	flex-wrap: wrap;
 	margin-left: -$gutter;
 	margin-right: -$gutter;
+	@include res(xxl){
+		margin-left: -10px;
+		margin-right: -10px;
+	}
+	@include res(xxs){
+		margin-left: -5px;
+		margin-right: -5px;
+	}
 
 	[class^="grid"]{
 		padding-left: $gutter;
 		padding-right: $gutter;
+		@include res(xxl){
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+		@include res(xxs){
+			padding-left: 5px;
+			padding-right: 5px;
+		}
 	}
 
 	&--center {
