--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -39,3 +39,11 @@
 	font-weight: bold;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'ALS Rubl';
+	src: url('../fonts/subset-ALSRubl.woff2') format('woff2'),
+	url('../fonts/subset-ALSRubl.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
