--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -20,6 +20,7 @@ $green: #00c453;
 $blue: #2f7bff;
 $gray-bg: #f0f0f7;
 $gray-border: #ebebeb;
+$gray-text: #b4b4b4;
 
 $pad-xxl: 100px;
 $pad-xl: 70px;
