--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import 'base/icons';
 @import 'base/typography';
 @import 'base/grid';
+@import 'base/layout';
 
 @import 'modules/forms';
 @import 'modules/buttons';
