--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,5 +19,6 @@
 @import 'modules/header';
 @import 'modules/section-title';
 @import 'modules/product-preview';
+@import 'modules/preview';
 
 @import 'pages/home';
