--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,6 +1,6 @@
 body {
 	font-family: $font;
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: normal;
 	line-height: 1.4;
 	color: #000;
@@ -32,6 +32,15 @@ h2, .h2 {
 	font-weight: bold;
 	font-size: 28px;
 	line-height: 1.2;
+	@include res(xxl){
+		font-size: 24px;
+	}
+	@include res(l){
+		font-size: 20px;
+	}
+	@include res(s){
+		font-size: 18px;
+	}
 }
 
 h3, .h3 {
@@ -53,9 +62,9 @@ h3, .h3 {
 	@include res(l) {
 		font-size: 12px;
 	}
-	p, ul, ol, li {
+	p, ul, ol, li ,table, img{
 		position: relative;
-		margin-bottom: 0.5em;
+		margin-bottom: 20px;
 		&:last-child {
 			margin-bottom: 0;
 		}
