footer почти готов

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,5 +20,7 @@
 @import 'modules/section-title';
 @import 'modules/product-preview';
 @import 'modules/preview';
+@import 'modules/s-pay-methods';
+@import 'modules/footer';
 
 @import 'pages/home';
