--- a/sass/helpers/_placeholders.scss
+++ b/sass/helpers/_placeholders.scss
@@ -6,3 +6,13 @@
 		color: $blue;
 	}
 }
+
+%link-blue{
+	color: $blue;
+	transition: color 0.3s ease;
+
+	&:hover,&:focus{
+		outline: none;
+		color: #000;
+	}
+}
