--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -30,9 +30,6 @@
 			&:hover {
 				color: $blue;
 			}
-			&:first-child {
-				padding-left: 0;
-			}
 		}
 	}
 }
@@ -86,6 +83,7 @@
 }
 
 .header__logo {
+	margin-left: 20px;
 	margin-right: 110px;
 	@include res(xl) {
 		margin-right: 60px;
@@ -139,6 +137,9 @@
 		margin-bottom: 4px;
 		line-height: 1;
 		font-size: 18px;
+		@include res(xxl) {
+			font-size: 16px;
+		}
 	}
 	span {
 		display: block;
@@ -163,25 +164,22 @@
 	}
 }
 
-
-
 .header__bottom {
 	margin-top: $pad-s;
 	margin-bottom: $pad-s;
-	ul {
-		display: flex;
-		align-items: center;
-		list-style: none;
-		text-transform: uppercase;
-		font-family: $font-head;
-		font-size: 18px;
-		font-weight: bold;
-		letter-spacing: 0.02em;
-	}
-	li {
-		&:first-child {
-			margin-left: -$pad-s;
-		}
+}
+
+.header__bottom-links {
+	display: flex;
+	align-items: center;
+	list-style: none;
+	text-transform: uppercase;
+	font-family: $font-head;
+	font-size: 18px;
+	font-weight: bold;
+	letter-spacing: 0.02em;
+	@include res(xxl) {
+		font-size: 16px;
 	}
 	a {
 		display: block;
@@ -196,5 +194,137 @@
 			color: $blue;
 			background: #f5f5fa;
 		}
+		&.active {
+			color: $blue;
+			background: #f5f5fa;
+		}
+	}
+}
+
+.header__bottom-cat-wrap {
+	position: absolute;
+	top: 100%;
+	left: 20px;
+	right: 0;
+	max-width: 1600px;
+	padding: 20px 0 0px 0;
+	border-radius: 15px;
+	visibility: hidden;
+	background: #fff;
+	transition: all 0.3s ease;
+	z-index: 10;
+	//overflow: hidden;
+	&.active {
+		opacity: 1;
+		visibility: visible;
+	}
+}
+
+.header__bottom-cat {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 20px;
+	opacity: 0;
+	transform: translate3d(0, -20px, 0);
+	transition: transform 0.4s ease,opacity 0.3s ease,visibility 0.3s ease;
+	visibility: hidden;
+	&.active {
+		position: relative;
+		top: 0;
+		opacity: 1;
+		visibility: visible;
+		transform: translate3d(0, 0, 0);
+	}
+}
+
+.bottom-cat {
+	padding: 20px;
+	border-radius: 15px;
+	box-shadow: 0 0 20px 0 transparentize(#000, 0.8);
+	background: #fff;
+	@include res(xxl) {
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
+
+.bottom-cat__deals {
+	display: flex;
+	margin-left: -10px;
+	margin-right: -10px;
+}
+
+.bottom-cat__deal {
+	max-width: 245px;
+	margin-left: 10px;
+	margin-right: 10px;
+	padding: 5px 5px;
+	border-radius: 15px;
+	box-shadow: 0 0 10px 0 transparent;
+	background: #f0f0f7;
+	transition: all 0.3s ease;
+	overflow: hidden;
+	@include res(xxl) {
+		margin-left: 8px;
+		margin-right: 8px;
+	}
+	&:hover {
+		box-shadow: 0 0 10px 0 transparentize(#000, 0.8);
+		span {
+			color: $blue;
+		}
+	}
+	img {
+		display: block;
+		max-width: 100%;
+	}
+	span {
+		display: block;
+		padding-bottom: 10px;
+		text-align: center;
+		font-family: $font-head;
+		font-size: 16px;
+		font-weight: bold;
+		transition: all 0.3s ease;
+		@include res(xxl) {
+			font-size: 15px;
+		}
+	}
+}
+
+.bottom-cat__fabricators {
+	display: flex;
+	align-items: center;
+	margin-left: -20px;
+	margin-right: -20px;
+	padding-top: 30px;
+	padding-bottom: 10px;
+	@include res(xxl) {
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
+
+.bottom-cat__fabricator {
+	display: block;
+	padding-left: 20px;
+	padding-right: 20px;
+
+	@include res(xxl) {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	&:hover {
+		img {
+			transform: translate3d(0,-8px,0);
+		}
+	}
+	img {
+		display: block;
+		max-width: 150px;
+		max-height: 60px;
+		width: 100%;
+		transition: all 0.3s ease;
 	}
 }
