--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -47,27 +47,34 @@
 	}
 	@include res(s){
 		width: 50%;
-		text-align: center;
 	}
 
 	&__title{
 		margin-bottom: 20px;
+		@include res(s){
+			margin-bottom: 10px;
+		}
 	}
 
 	&--contacts{
 		@include res(s){
 			width: 100%;
-			margin-top: 40px;
+			margin-top: 20px;
 		}
 	}
 
 	&--subscribe{
+		@include res(xxl){
+			max-width: 330px;
+		}
 		@include res(l){
 			margin-top: 40px;
 			width: 60%;
+			max-width: 420px;
 		}
 		@include res(s){
 			width: 100%;
+			margin-top: 20px;
 		}
 	}
 
@@ -84,7 +91,7 @@
 		@include res(s){
 			width: 100%;
 			padding-top: 0;
-			margin-top: 40px;
+			margin-top: 20px;
 		}
 
 		.social-links{
@@ -123,6 +130,12 @@
 .footer-cont{
 	display: block;
 	margin-bottom: 20px;
+	@include res(s){
+		display: inline-block;
+		vertical-align: top;
+		margin-right: 40px;
+		margin-bottom: 10px;
+	}
 
 	small{
 		display: block;
@@ -150,16 +163,9 @@
 .subscribe-group{
 	position: relative;
 	margin-bottom: 20px;
-	@include res(xxl){
-		width: 300px;
-	}
 	@include res(l){
 		width: auto;
 		max-width: 400px;
-	}
-	@include res(s){
-		margin-left: auto;
-		margin-right: auto;
 	}
 
 	.input-text{
@@ -226,5 +232,40 @@
 			background: $blue;
 			color: #FFF;
 		}
+	}
+}
+
+
+.footer-bottom{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	@extend .small-text;
+	margin-top: 50px;
+	@include res(s){
+		flex-direction: column;
+		margin-top: 30px;
+	}
+
+	&__center{
+		@include res(s){
+			margin: 20px 0;
+		}
+		a{
+			@extend %link-blue;
+		}
+	}
+
+	&__right{
+		img{
+			opacity: 0.3;
+			transform: translate3d(0,0,0);
+			transition: all 0.3s ease;
+
+			&:hover{
+				opacity: 0.5;
+			}
+		}
+		
 	}
 }
