--- a/sass/modules/_s-pay-methods.scss
+++ b/sass/modules/_s-pay-methods.scss
@@ -2,15 +2,12 @@
 	border-top: 1px solid $gray-border;
 	border-bottom: 1px solid $gray-border;
 	padding: 5px 0;
-	@include res(m){
-		display: none;
-	}
 
 	.container{
 		display: flex;
 		align-items: center;
 		@include res(m){
-			flex-direction: column;
+			display: block;
 		}
 	}
 
@@ -18,19 +15,26 @@
 		margin-right: 40px;
 		flex-shrink: 0;
 		@include res(m){
+			text-align: center;
 			margin-bottom: 5px;
+			margin-right: 0;
 		}
 	}
 
 	&__img{
 		flex-shrink: 1;
-		pointer-events: none;
+		overflow: auto;
 
 		img{
 			max-width: 100%;
 			height: auto;
 			display: block;
 			transform: translate3d(0,0,0);
+			@include res(m){
+				height: 40px;
+				width: auto;
+				max-width: initial;
+			}
 		}
 	}
 }
