--- a/sass/modules/_modals.scss
+++ b/sass/modules/_modals.scss
@@ -1,25 +1,64 @@
 .modal{
 	display: none;
-	width: 500px;
+	width: 420px;
 	max-width: 100%;
 	will-change: transform,opacity;
 	overflow: visible !important;
+	padding: 0;
+	border-radius: 15px;
+	background: #FFF;
+	box-shadow: 0 0 30px 0 rgba(19, 47, 141, 0.15);
+	transform: translate3d(0,-20px,0);
+	opacity: 0;
+	transition: all 0.4s ease;
+
+	&__header{
+		position: relative;
+		z-index: 2;
+		padding: $pad-xs $pad-l $pad-xs $pad-s;
+		background: $gray-bg;
+		border-radius: 15px 15px 0 0;
+	}
+
+	&__content{
+		position: relative;
+		z-index: 2;
+		padding: $pad-xs $pad-s;
+	}
+
+	&__descr{
+		margin-bottom: $pad-xs;
+	}
+
+	&--thanks{
+		&:before{
+			display: none;
+		}
+		.modal__header{
+			border-radius: 15px;
+			.modal__title{
+				padding: $pad-xs 0;
+			}
+		}
+	}
 }
 
 .fancybox-slide--current {
 	.modal {
-
+		transform: none;
+		opacity: 1;
 	}
 }
 
 .fancybox-is-closing{
 	.modal {
-
+		transform: translate3d(0,20px,0);
+		opacity: 0;
 	}
 }
 
 .fancybox-bg{
-	background: #8c8e9a;
+	background: #152748;
 }
 
 .fancybox-close-small,.fancybox-slide--image .fancybox-close-small, .fancybox-slide--iframe .fancybox-close-small{
