Mobile menu, add youtube icon

--- a/sass/base/_icons.scss
+++ b/sass/base/_icons.scss
@@ -24,6 +24,9 @@ i {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.i-soc-you:before {
+	content: "\e911";
+}
 .i-down:before {
 	content: "\e900";
 }
