--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,8 @@
 @import 'modules/buttons';
 @import 'modules/modals';
 @import 'modules/header';
+@import 'modules/printer-cart';
+@import 'modules/mobile-menu';
 @import 'modules/section-title';
 @import 'modules/product-preview';
 @import 'modules/preview';
