--- a/sass/modules/_mobile-menu.scss
+++ b/sass/modules/_mobile-menu.scss
@@ -4,23 +4,30 @@
 	left: 0;
 	max-width: 360px;
 	width: 100%;
-	height: 100%;
-	padding-top: 40px;
+	height: 100vh;
+	padding-top: 60px;
 	padding-bottom: 40px;
 	background: #191f28;
 	transform: translate3d(-360px,0,0);
 	transition: all 0.3s ease;
+	overflow: auto;
 	z-index: 10;
 	&.active {
 		transform: translate3d(0,0,0);
 	}
 }
 
-.mobile-menu {}
+.mobile-menu {
+
+}
 
 .mobile-menu__cat {
 	margin-bottom: 15px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	color: #fff;
+	border-top: 1px solid #434349;
+	border-bottom: 1px solid #434349;
 	&>li {
 		position: relative;
 		&>a {
